# bevy-networker-multiplayer

./: Cargo.toml  README.md
crates/bevy-networker-multiplayer-macros/: Cargo.toml
crates/bevy-networker-multiplayer-macros/src/: lib.rs
examples/: cubes_demo.rs  cubes_demo_prediction.rs  messages_demo.rs  replication_demo.rs
src/: lib.rs  netmsg.rs  netres.rs  prediction.rs  replicated.rs  sync.rs
tests/: replication.rs
