[package]
name = "bevy-networker-multiplayer"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "Tiny Bevy networking plugin with automatic entity replication and resource sync."
repository = "https://github.com/OrtheSnowJames/bevy-networker-multiplayer"

[features]
default = []
prediction = []

[workspace]
resolver = "3"
members = ["crates/bevy-networker-multiplayer-macros"]

[dependencies]
bevy = "0.18.1"
bevy-networker-multiplayer-macros = { path = "crates/bevy-networker-multiplayer-macros", version = "0.1.0" }
bincode = { version = "2.0.1", features = ["serde"] }
base64 = "0.22.1"
inventory = "0.3.21"
networker-rs = "0.1.9"
serde = { version = "1.0.228", features = ["derive"] }

[[example]]
name = "cubes_demo_prediction"
required-features = ["prediction"]
