[package]
name = "bevy-networker-multiplayer-macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Proc macros for bevy-networker-multiplayer"
repository = "https://github.com/OrtheSnowJames/bevy-networker-multiplayer"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.40"
syn = { version = "2.0.117", features = ["full", "parsing"] }